--- a/depoyment.yml
+++ b/depoyment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namespace: nginx-argocd
+  #namespace: nginx-argocd
 spec:
   selector:
     matchLabels:
